remove style using html only and add link to playlist images to source of the images

--- a/exercises/ex1/index.html
+++ b/exercises/ex1/index.html
@@ -20,17 +20,20 @@
     </ol>
     <iframe src="https://www.youtube.com/embed/vOXZkm9p_zY">
     </iframe>
-    <h2 style="font-style: italic;">you may also like</h2>
+    <h2><i>you may also like</i></h2>
     <div>
         <a href="playlist-2.html">coldplay</a>
         <br/>
-        <img src="images/playlist2.jpg"/>
+        <a href="https://www.youtube.com/playlist?list=PLsvoYlzBrLFCOMajheCwyKnli_60VgzDl">
+            <img src="https://i.ytimg.com/vi/UL6p0mVvbq0/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAc9jk9vT1VeW1J_A5Zmc0_f3PkCg"/>
+        </a>
     </div>
     <div>
         <a href="playlist-3.html">Guns N' Roses</a>
         <br/>
-        <img src="images/playlist3.jpg"/>
+        <a href="https://www.youtube.com/playlist?list=PLOTK54q5K4IMYju19e89nzQnzjKeVNPWH">
+            <img src="https://i.ytimg.com/vi/FMbl1ntpIXQ/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLDK1MQ4Go5hSbX4u5Q_Xan7n85I1Q"/>
+        </a>
     </div>
-    <a href="https://www.pinterest.com/aepartin16/spotify-playlist-covers/">@aepartin16</a>
 </body>
 </html>
