--- a/exercises/ex1/playlist-2.html
+++ b/exercises/ex1/playlist-2.html
@@ -11,9 +11,9 @@
     <img src="https://i.ytimg.com/vi/UL6p0mVvbq0/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAc9jk9vT1VeW1J_A5Zmc0_f3PkCg"/>
     <br/>
     <p>Coldplay<br/>10 March 2022</p>
-    <h4 style="font-style: italic;">comments</h4>
+    <h4><i>comments</i></h4>
     <ui>
-        <li style="font: bold;">first comment</li>
+        <li><b>first comment</b></li>
         <li>second comment</li>
     </ui>
     <a href="index.html">back to home page</a>
