--- a/exercises/ex1/playlist-3.html
+++ b/exercises/ex1/playlist-3.html
@@ -11,9 +11,9 @@
     <img src="https://i.ytimg.com/vi/FMbl1ntpIXQ/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLDK1MQ4Go5hSbX4u5Q_Xan7n85I1Q"/>
     <br/>
     <p>Guns N' Roses<br/>7 December 2020</p>
-    <h4 style="font-style: italic;">comments</h4>
+    <h4><i>comments</i></h4>
     <ui>
-        <li style="font: bold;">first comment</li>
+        <li><b>first comment</b></li>
         <li>second comment</li>
     </ui>
     <a href="index.html">back to home page</a>
