--- a/exercises/ex1/index.html
+++ b/exercises/ex1/index.html
@@ -20,7 +20,7 @@
     </ol>
     <iframe src="https://www.youtube.com/embed/vOXZkm9p_zY">
     </iframe>
-    <h2 style="font-style: italic;">you may also like</h2>
+    <h2><i>you may also like</i></h2>
     <div>
         <a href="playlist-2.html">coldplay</a>
         <br/>
