rplace all /> to > (/> is belong to previese html it no longer neccesery)

--- a/exercises/ex1/index.html
+++ b/exercises/ex1/index.html
@@ -8,10 +8,10 @@
 <body>
     <a href="#" class="logo"></a>
     <h1>Imagine Dragons Music Track Listing</h1>
-    <img src="images/myplaylist.jpg"/>
+    <img src="images/myplaylist.jpg">
     <h4>Imagine Dragons</h4>
     <h5>24 November 2022</h5>
-    <br/>
+    <br>
     <h2>Imagine Dragons Music Track List</h2>
     <ol>
         <li>Track 1 | Imagine Dragons - Believer</li>
@@ -23,13 +23,13 @@
     <h2><i>you may also like</i></h2>
     <div>
         <a href="playlist-2.html">coldplay</a>
-        <br/>
-        <img src="images/playlist2.jpg"/>
+        <br>
+        <img src="images/playlist2.jpg">
     </div>
     <div>
         <a href="playlist-3.html">Guns N' Roses</a>
-        <br/>
-        <img src="images/playlist3.jpg"/>
+        <br>
+        <img src="images/playlist3.jpg">
     </div>
     <a href="https://www.pinterest.com/aepartin16/spotify-playlist-covers/">@aepartin16</a>
 </body>
