--- a/exercises/ex1/playlist-3.html
+++ b/exercises/ex1/playlist-3.html
@@ -8,9 +8,9 @@
 <body>
     <a href="#" class="logo"></a>
     <h1>Not In This Lifetime 2019 Music Track Listing</h1>
-    <img src="https://i.ytimg.com/vi/FMbl1ntpIXQ/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLDK1MQ4Go5hSbX4u5Q_Xan7n85I1Q"/>
-    <br/>
-    <p>Guns N' Roses<br/>7 December 2020</p>
+    <img src="https://i.ytimg.com/vi/FMbl1ntpIXQ/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLDK1MQ4Go5hSbX4u5Q_Xan7n85I1Q">
+    <br>
+    <p>Guns N' Roses<br>7 December 2020</p>
     <h4><i>comments</i></h4>
     <ui>
         <li><b>first comment</b></li>
