--- a/exercises/ex1/playlist-2.html
+++ b/exercises/ex1/playlist-2.html
@@ -8,9 +8,9 @@
 <body>
     <a href="#" class="logo"></a>
     <h1>Coldplay X Selena Gomez - Let Somebody Go Music Track Listing</h1>
-    <img src="https://i.ytimg.com/vi/UL6p0mVvbq0/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAc9jk9vT1VeW1J_A5Zmc0_f3PkCg"/>
-    <br/>
-    <p>Coldplay<br/>10 March 2022</p>
+    <img src="https://i.ytimg.com/vi/UL6p0mVvbq0/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAc9jk9vT1VeW1J_A5Zmc0_f3PkCg">
+    <br>
+    <p>Coldplay<br>10 March 2022</p>
     <h4><i>comments</i></h4>
     <ui>
         <li><b>first comment</b></li>
