remove divs and change playlist link to cover both the title of playlist and image

--- a/exercises/ex1/index.html
+++ b/exercises/ex1/index.html
@@ -21,16 +21,18 @@
     <iframe src="https://www.youtube.com/embed/vOXZkm9p_zY">
     </iframe>
     <h2><i>you may also like</i></h2>
-    <div>
-        <a href="playlist-2.html">coldplay</a>
+    <a href="playlist-2.html">
+        coldplay
         <br>
         <img src="images/playlist2.jpg">
-    </div>
-    <div>
-        <a href="playlist-3.html">Guns N' Roses</a>
+    </a>
+    <br>
+    <a href="playlist-3.html">
+        Guns N' Roses
         <br>
         <img src="images/playlist3.jpg">
-    </div>
+    </a>
+    <br>
     <a href="https://www.pinterest.com/aepartin16/spotify-playlist-covers/">@aepartin16</a>
 </body>
 </html>
