--- a/exercises/ex1/index.html
+++ b/exercises/ex1/index.html
@@ -18,7 +18,7 @@
         <li>Track 2 | Imagine Dragons - Birds</li>
         <li>Track 3 | Imagine Dragons - Thunder</li>
     </ol>
-    <iframe src="https://www.youtube.com/embed/vOXZkm9p_zY">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/vOXZkm9p_zY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
     </iframe>
     <h2><i>you may also like</i></h2>
     <a href="playlist-2.html">
