change commants in playlist to be italic

--- a/exercises/ex1/playlist-2.html
+++ b/exercises/ex1/playlist-2.html
@@ -11,10 +11,10 @@
     <img src="https://i.ytimg.com/vi/UL6p0mVvbq0/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAc9jk9vT1VeW1J_A5Zmc0_f3PkCg">
     <br>
     <p>Coldplay<br>10 March 2022</p>
-    <h4><i>comments</i></h4>
+    <h4>comments</h4>
     <ui>
-        <li><b>first comment</b></li>
-        <li>second comment</li>
+        <li><b><i>first comment</i></b></li>
+        <li><i>second comment</i></li>
     </ui>
     <a href="index.html">back to home page</a>
 </body>
