finished excersise 2 css and stracture no content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="http://se.shenkar.ac.il/students/2022-2023/web1/assets/style.min.css">
-    <title>Ron Barcochva</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+    <link rel="stylesheet" href="./css/ex2.css">
+    <title>my Profile</title>
 </head>
+
 <body>
-    <section>Hello World!</section>
+    <header>
+        <section>
+            <a href="#" id="logo">
+                <span>Ron barcochva</span>
+            </a>
+        </section>
+    </header>
+    <main>
+        <section class="preview">
+            <img src="./images/profile.png">  
+            <section>
+                <p id="sentence1">main sentence</p>
+                <p id="sentence2">secondary sentence</p>
+            </section>
+        </section>
+        <section>
+            <p class="title">About</p>
+            <p id="about">We’ve actually already asked hundreds of women what they want, and made a database with the results. All
+                you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
+                match you with a few perfect gift options.
+                <br><br>
+                We’ve actually already asked hundreds of women what they want, and made a database with the results. All
+                you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
+                match you with a few perfect gift options.
+                <br><br>
+                We’ve actually already asked hundreds of women what they want, and made a database with the results. All
+                you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
+                match you with a few perfect gift options.
+            </p>
+        </section>
+        <section id="exercises">
+            <p class="title">Exercises</p>
+            <section class="horizontal-card-list">
+                <section class="card">
+                    <img src="./images/card.png">
+                    <h4>Playlist</h4>
+                    <a href="./exercises/ex1"><span>View</span></a>
+                </section>
+                <section class="card">
+                    <img src="./images/card.png">
+                    <h4>Profile</h4>
+                    <a href="#"><span>View</span></a>
+                </section>
+                <section class="card">
+                    <img src="./images/card.png">
+                    <h4>Exercise 3</h4>
+                    <a href="./exercises/ex3"><span>View</span></a>
+                </section>
+                <section class="card">
+                    <img src="./images/card.png">
+                    <h4>Exercise 4</h4>
+                    <a href="./exercises/ex4"><span>View</span></a>
+                </section>
+                <section class="card">
+                    <img src="./images/card.png">
+                    <h4>Exercise 5</h4>
+                    <a href="./exercises/ex5"><span>View</span></a>
+                </section>
+            </section>
+        </section>
+        <section>
+            <p class="title">Programming Languages</p>
+            <section>
+                <ul>
+                    <li>c++</li>
+                    <li>c</li>
+                    <li>JavaScript</li>
+                    <li>c#</li>
+                    <li>java</li>
+                </ul>
+            </section>
+        </section>
+        <section>
+            <p class="title">Your choice</p>
+            <section class="preview">
+
+            </section>
+        </section>
+    </main>
+        <footer>
+            <section>
+                <p class="title">Follow Us</p>
+                <a class="footer-link" href="https://www.linkedin.com/in/ron-barcochva-1b2451228/">LinkedIn</a>
+                <a class="footer-link" href="https://www.facebook.com/software.engineering.shenkar/">FaceBook</a>
+                <a class="footer-link" href="https://www.instagram.com/shenkar.se/">Instagram</a>
+                <section id="footer-subscribe">&copy; כל הזכויות שמורות לרון ברכוכבא 2023</section>
+            </section>
+        </footer>
 </body>
+
 </html>
