add bold to title in priview

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="preview">
             <img src="./images/profile.png">  
             <section>
-                <p id="sentence1">main sentence</p>
+                <p id="sentence1">main <span class="no-bold">sentence</span></p>
                 <p id="sentence2">secondary sentence</p>
             </section>
         </section>
