add content finished ex2 complitly

--- a/index.html
+++ b/index.html
@@ -20,23 +20,17 @@
         <section class="preview">
             <img src="./images/profile.png">  
             <section>
-                <p id="sentence1">main <span class="no-bold">sentence</span></p>
-                <p id="sentence2">secondary sentence</p>
+                <p class="sentence1">my name is Ron Barcochva and this is my web protfolio.</p>
+                <p class="sentence2">this is an introduction page for the course Web & Cloud engineering.</p>
             </section>
         </section>
         <section>
             <p class="title">About</p>
-            <p id="about">We’ve actually already asked hundreds of women what they want, and made a database with the results. All
-                you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
-                match you with a few perfect gift options.
-                <br><br>
-                We’ve actually already asked hundreds of women what they want, and made a database with the results. All
-                you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
-                match you with a few perfect gift options.
-                <br><br>
-                We’ve actually already asked hundreds of women what they want, and made a database with the results. All
-                you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
-                match you with a few perfect gift options.
+            <p id="about">
+                My name is Ron Barcochva, I'am 24.
+                and i'am a software engineering student at Shenkar's college second year. 
+                i was working in the companney SES Education in Rishon LeZion as a React and Node.js Full Stack developer for the last year.
+                building studing softwer called st-lab and also some minor task in IT and Linux like migrating to AWS from GoDaddy and building bash scripts for automating deployments in Linux.
             </p>
         </section>
         <section id="exercises">
@@ -73,18 +67,26 @@
             <p class="title">Programming Languages</p>
             <section>
                 <ul>
-                    <li>c++</li>
-                    <li>c</li>
+                    <li>C++</li>
+                    <li>C</li>
                     <li>JavaScript</li>
-                    <li>c#</li>
-                    <li>java</li>
+                    <li>C#</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>SQL</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>NoSQL</li>
                 </ul>
             </section>
         </section>
         <section>
-            <p class="title">Your choice</p>
+            <p class="title">Hobbies</p>
             <section class="preview">
-
+                    <img src="./images/food.png">  
+                <section>
+                    <p class="sentence1">my fevorit food is humburger</p>
+                </section>
             </section>
         </section>
     </main>
