exersise 3 first 2 layouts mostly finished need some positioning polishing

--- a/exercises/ex3/index.html
+++ b/exercises/ex3/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
+    <link rel="stylesheet" href="css/ex3.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="index.html" class="selected"><span>MIX</span></a>
+            <a href="layout2.html"><span>STAIRS</span></a>
+            <a href="#"><span>DYNAMIC</span></a>
+        </nav>
+    </header>
+    <section id="wrapper">
+        <main>
+            <section id="about-mix">
+                <p>- MIX</p>
+                <p>Mix layout for any creative idea</p>
+            </section>
+            <img id="mix-logo" src="images/Mix.png">
+        </main>
+    </section>
+    <footer></footer>
 </body>
 </html>
