copyright sentence wasnt recognize the hebrew letters in ftp server change it to english

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <a class="footer-link" href="https://www.linkedin.com/in/ron-barcochva-1b2451228/">LinkedIn</a>
                 <a class="footer-link" href="https://www.facebook.com/software.engineering.shenkar/">FaceBook</a>
                 <a class="footer-link" href="https://www.instagram.com/shenkar.se/">Instagram</a>
-                <section id="footer-subscribe">&copy; כל הזכויות שמורות לרון ברכוכבא 2023</section>
+                <section id="footer-subscribe">&copy; all copyright belong to Ron Barcochva 2023</section>
             </section>
         </footer>
 </body>
