change protfolio page exersize 3 card link name to the new excersize 3 name

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </section>
                 <section class="card">
                     <img src="./images/card.png">
-                    <h4>Exercise 3</h4>
+                    <h4>adptive + responsive web</h4>
                     <a href="./exercises/ex3"><span>View</span></a>
                 </section>
                 <section class="card">
