change image in mix page inde.html to be html elements

--- a/exercises/ex3/index.html
+++ b/exercises/ex3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/ex3.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,9 +24,43 @@
                 <p>- MIX</p>
                 <p>Mix layout for any creative idea</p>
             </section>
-            <img id="mix-logo" src="images/Mix.png">
+            <section id="mix-logo">
+                <section class="row">
+                    <section class="column">
+                        <section class="yellow"></section>
+                        <section class="yellow"></section>
+                        <section class="yellow"></section>
+                        <section class="yellow"></section>
+                        <section class="row">
+                            <section class="yellow"></section>
+                            <section class="yellow"></section>
+                        </section>
+                    </section>
+                    <section class="column">
+                        <section class="row">
+                            <section class="yellow"></section>
+                            <section class="column">
+                                <section class="yellow"></section>
+                                <section class="yellow"></section>
+                                <section class="yellow"></section>
+                                <section class="yellow"></section>
+                            </section>
+                        </section>
+                        <section class="row">
+                            <section class="yellow"></section>
+                            <section class="column">
+                                <section class="row">
+                                    <section class="yellow"></section>
+                                    <section class="yellow"></section>
+                                </section>
+                                <section class="yellow"></section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
         </main>
     </section>
     <footer></footer>
 </body>
+
 </html>
