--- a/exercises/ex3/layout2.html
+++ b/exercises/ex3/layout2.html
@@ -18,7 +18,7 @@
     </header>
     <section id="wrapper">
         <main>
-            <section id="content">
+            <section class="row">
                 <section class="vertical-box-list">
                     <section></section>
                     <section></section>
