add layout3 without js and black box in content area and add fixes to other pages

--- a/exercises/ex3/index.html
+++ b/exercises/ex3/index.html
@@ -13,12 +13,12 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="selected"><span>MIX</span></a>
+            <a href="#" class="selected"><span>MIX</span></a>
             <a href="layout2.html"><span>STAIRS</span></a>
-            <a href="#"><span>DYNAMIC</span></a>
+            <a href="layout3.html"><span>DYNAMIC</span></a>
         </nav>
     </header>
-    <section id="wrapper">
+    <section id="index-body">
         <main>
             <section id="about-mix">
                 <p>- MIX</p>
