--- a/exercises/ex3/layout2.html
+++ b/exercises/ex3/layout2.html
@@ -13,10 +13,10 @@
         <nav>
             <a href="index.html"><span>MIX</span></a>
             <a href="#" class="selected"><span>STAIRS</span></a>
-            <a href="#"><span>DYNAMIC</span></a>
+            <a href="layout3.html"><span>DYNAMIC</span></a>
         </nav>
     </header>
-    <section id="wrapper">
+    <section id="layout2-body">
         <main>
             <section class="row">
                 <section class="vertical-box-list">
