add javascript for ex3 part 2

--- a/exercises/ex3/layout3.html
+++ b/exercises/ex3/layout3.html
@@ -11,7 +11,7 @@
 <body>
     <section id="wrapper">
         <header>
-            <section></section>
+            <section id="box-btn"></section>
         </header>
         <section id="layout3-body">
             <section id="nav-section">
@@ -22,6 +22,8 @@
                 </nav>
             </section>
             <main>
+                <section id="content-area">
+                </section>
             </main>
             <aside id="responsive-aside">
             </aside>
@@ -30,4 +32,5 @@
         <footer></footer>
     </section>
 </body>
+<script src="js/script.js"></script>
 </html>
