--- a/test.html
+++ b/test.html
@@ -22,12 +22,7 @@
         var resultContainer = document.getElementById('qr-reader-results');
         var lastResult, countResults = 0;
         function onScanSuccess(decodedText, decodedResult) {
-            if (decodedText !== lastResult) {
-                ++countResults;
-                lastResult = decodedText;
-                // Handle on success condition with the decoded message.
-                console.log(`Scan result ${decodedText}`, decodedResult);
-            }
+                alert(`Scan result ${decodedText}`, decodedResult);
         }
 
         var html5QrcodeScanner = new Html5QrcodeScanner(
