--- a/test.html
+++ b/test.html
@@ -23,9 +23,8 @@
         var html5QrcodeScanner = new Html5QrcodeScanner(
             "qr-reader", { fps: 10, qrbox: 250 });
         function onScanSuccess(decodedText, decodedResult) {
-                alert(`Scan result ${decodedText}`, decodedResult);
-                html5QrcodeScanner.clear();
-                html5QrcodeScanner.render(onScanSuccess);
+            resultContainer.innerHTML = `Scan result ${decodedText}`;
+            html5QrcodeScanner.clear();
         }
         html5QrcodeScanner.render(onScanSuccess);
     });
