--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
             resultContainer.innerHTML = `Scan result ${decodedText}`;
             html5QrCode.stop();
         }
-        html5QrCode.start({ facingMode: "user" }, { fps: 10, qrbox: 250 }, onScanSuccess);
+        html5QrCode.start({ facingMode: "environment" }, { fps: 10, qrbox: 250 }, onScanSuccess);
     });
 </script>
 </head>
