--- a/exercises/ex4/index.html
+++ b/exercises/ex4/index.html
@@ -1,12 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"
+    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" >
+    <script src="js/script.js"></script>
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Join Our Members Club</h1>
+    <form
+      action="http://se.shenkar.ac.il/teach/web1/get_form3.php"
+      method="get"
+      autocomplete="on"
+      id="clubForm"
+      class="justify-content-center row g-3"
+    >
+      <div class="col-md-4 form-floating">
+        <input class="form-control" type="text" name="fullName" id="fullName" placeholder="Full Name" required>
+        <label for="fullName" class="form-label">Full Name</label>
+        <div class="invalid-feedback">
+          Full Name must be only letters with atleast one space
+        </div>
+      </div>
+      <div class="col-md-4 form-floating">
+        <input class="form-control" type="password" name="pass" id="password" placeholder="Password" required>
+        <label for="password" class="form-label">Password</label>
+        <div class="invalid-feedback">
+          password must be atleast 8 characters long with atleast one upercase letter and lowercase letter
+        </div>
+      </div>
+      <div class="col-md-4 form-floating">
+        <input class="form-control" type="email" name="mail" id="email" placeholder="Email" required>
+        <label for="email" class="form-label">Email</label>        
+        <div class="invalid-feedback">
+          enter a valid email
+        </div>
+      </div>
+      <div class="col-md-4 form-floating">
+        <input class="form-control" type="url" name="website" id="website" placeholder="Your Website" required>
+        <label for="website" class="form-label">Your Website</label>        
+        <div class="invalid-feedback">
+          Enter a valid website url
+        </div>
+      </div>
+      <div class="col-md-4 form-floating">
+        <input class="form-control" type="tel" name="phone" pattern="\d{9,10}" id="phone" placeholder="Phone" required>
+        <label for="phone" class="form-label">Phone</label>
+        <div class="invalid-feedback">
+          phone number must be 9-10 digits long and contain only numbers
+        </div>
+      </div>
+      <div class="col-md-4 form-floating">
+        <input class="form-control" type="number" name="coffee" id="coffee" value="0"></label>
+        <label for="coffee" class="form-label"> How many time i drink coffe a day? </label>
+      </div>
+      <div class="col-md-4">
+        <label for="temper" class="form-label"> the tempreture? </label>
+        <div class="d-flex justify-content-between">
+          <span>0</span>
+          <span id="temperValue">25</span>
+          <span>40</span>
+        </div>
+        <input class="form-range" type="range" name="temper" id="temper" min="0" value="25" max="40">
+      </div>
+      <div class="col-md-4 form-floating">
+        <textarea class="form-control" name="address" id="address" placeholder="address" required></textarea>
+        <label for="address" class="form-label">address</label>
+      </div>
+      <div class="col-md-4">
+        <label for="interests" class="form-label">interests</label>
+        <dataset id="interests">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="interests[]" id="interest1" value="Reading books">            
+            <label class="form-check-label" for="interest1">
+              Reading books
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="interests[]" id="interest2" value="Play with my children">            
+            <label class="form-check-label" for="interest2">
+              Play with my children
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="interests[]" id="interest3" value="Sleeping">            
+            <label class="form-check-label" for="interest3">
+              Sleeping
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="interests[]" id="interest4" value="Watching TV">            
+            <label class="form-check-label" for="interest4">
+              Watching TV
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="interests[]" id="interest5" value="Playing computer games">            
+            <label class="form-check-label" for="interest5">
+              Playing computer games
+            </label>
+          </div>
+        </dataset>
+        <div class="invalid-feedback">
+          check atleast 3 interests
+        </div>
+      </div>
+      <div class="col-md-4">
+        <label for="gender" class="form-label">Gender</label>
+        <dataset name="gender" id="gender">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="gender" id="male" value="yes" checked>
+            <label class="form-check-label" for="male">
+              Male
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="gender" id="female" value="no">
+            <label class="form-check-label" for="female">
+              Female
+            </label>
+          </div>
+        </dataset>
+      </div>
+      <div class="col-md-4">
+        <label for="age" class="form-label">Your Age</label>
+        <select class="form-select" name="age" id="age">
+          <option value="23">23</option>
+          <option value="24">24</option>
+          <option value="25">25</option>
+          <option value="26">26</option>
+          <option value="27">27</option>
+          <option value="28">28</option>
+          <option value="29">29</option>
+          <option value="30">30</option>
+          <option value="31">31</option>
+          <option value="32">32</option>
+          <option value="33">33</option>
+          <option value="34">34</option>
+          <option value="35">35</option>
+          <option value="36">36</option>
+          <option value="37">37</option>
+          <option value="38">38</option>
+        </select>
+        <div class="invalid-feedback">
+          age must be between 23-38
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </body>
 </html>
