add highscore to get variabalse

--- a/exercises/ex4/edit.html
+++ b/exercises/ex4/edit.html
@@ -162,6 +162,13 @@
               id="score"
               required
             />
+            <input
+              class="form-control"
+              type="hidden"
+              name="highscore"
+              id="highscore"
+              required
+            />
             <div class="w-100">
               <label for="fullName" class="form-label"
                 >What is your full name?</label
