change php action path for shenkar server from localhost

--- a/exercises/ex4/edit.html
+++ b/exercises/ex4/edit.html
@@ -149,7 +149,7 @@
           </svg>
 
           <form
-            action="http://localhost:3000/exercises/ex4/index.php"
+            action="https://se.shenkar.ac.il/students/2022-2023/web1/dev_23/exercises/ex4/index.php"
             method="get"
             autocomplete="on"
             id="clubForm"
